# InverseMagneticBillards

./: LICENSE  README.md  TODO.txt
GDNative/: .gitignore  CMakeLists.txt  README.md
GDNative/InverseMagneticBillard/: CMakeLists.txt
GDNative/InverseMagneticBillard/include/: InverseMagneticBillard.h  InverseTrajectory.h  SymplecticTrajectory.h  Trajectory.h  Vectors.h
GDNative/InverseMagneticBillard/src/: GodotLibrary.cpp  InverseMagneticBillard.cpp  InverseTrajectory.cpp  SymplecticTrajectory.cpp  Trajectory.cpp
Godot/: .gitignore  ControlPolygonVertex.gd  InverseMagneticBillard.tscn  Panel.gd  PolygonVertex.gd  PolygonVertex.tscn  Trajectories.gd  Trajectory.tscn  export_presets.cfg  image.gd  project.godot  test.gd  test2.gd
Godot/Camera/: Camera2D.gd  Camera2D.tscn  ContainerSurroundingCamera.gd
Godot/ControlPanel/: OnePolygonVertex.gd  OnePolygonVertex.tscn  OneTrajectoryControlContainer.gd  OneTrajectoryControlContainer.tscn  PolygonVertexControl.gd  ScrollContainer.gd  TextEditScrollbar.gd
Godot/DEPRECATED/: FlowMapOLD.gd  MarginContainerScript.gd  MultiMesh.tscn  OneMeshForAll.tscn  ScrollBar.gd  ScrollContainer.gd  material.tres
Godot/Flowmap/: FlowMap.gd  FlowmapControl.gd
Godot/GDNative/: InverseMagneticBillard.tres  InverseMagneticBillard_11-28.wasm
Godot/Phasespace/: MultiMesh.tscn  MultiMeshInstance2D.gd  MultimeshHandler.gd  (+6 more)
Praktikum/: InverseMagneticBillard.tscn  Trajectories.gd  export_presets.cfg  project.godot
docs/: InverseMagneticBillard.wasm  index.apple-touch-icon.png.import  index.html  index.pck  index.png.import
(+31 files in other folders)
